HelloUltraviolet/Fixtures/RejectedSource/Expressions/SuspensionFormsDiagnosticsTable/Expected.uv
//! Expected diagnostic metadata for the SuspensionFormsDiagnosticsTable rejected-source specimen.

expectedDiagnostic("E-CON-0132", "diagnostics.21.SuspensionForms")
